fix: add vertical spacing between tags #245

--- a/assets/sass/_components.sass
+++ b/assets/sass/_components.sass
@@ -252,10 +252,11 @@
     span
       align-items: center
       margin-bottom: 0.5rem
+      @media screen and (min-width: 557px)
+        gap: 0.5rem 0
       &:last-of-type
         @media screen and (max-width: 667px)
           margin-top: -0.5rem
-        
     .button
       @media screen and (min-width: 667px)
         margin: 0 0.5rem
